# visionops_v3

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/collector_web/: README.md
config/: active_camera.json
configs/app/: carton_partition_check.example.yaml  carton_partition_check.real.example.yaml  carton_tube_check.example.yaml  carton_tube_check.real.example.yaml  collector.example.yaml  gateway_modbus.example.yaml
configs/edge/: base.example.yaml  rk3576.example.yaml  rk3588.example.yaml
configs/runtime/: README.md
configs/server/: server.example.yaml
configs/task/: detection.example.yaml  obb.example.yaml  roi_classification.example.yaml
deploy/scripts/: run_m11_dual_business_apps_example.sh
docs/: HP60C_ORBBEC_DUAL_CAMERA_INTEGRATION.md  M24.3_orbbec336l_camera_recovery.md  M24.5_orbbec_whole_box_reboot_escalation.md  M25.3_EDGE_ENV_DEPENDENCY_AUDIT.md
docs/architecture/: config_design.md  edge_runtime.md  m11_business_closed_loop.md  overview.md
docs/handoff/: current_state_2026_06_30.md  m13_rga_only_changes.md  m14_camera_settings_sdk_bridge_changes.md  m14_orbbec_camera_bridge_path_no_restart_changes.md  m14_orbbec_settings_api_changes.md  m14_orbbec_settings_path_latency_changes.md  m14_settings_ui_changes.md  m15_1_algorithm_settings_changes.md  m15_2_segmentation_proto_mask.md  m16_2_dataset_upload_confirm.md  m16_4_production_mode_live.md
docs/legacy_notes/: README.md
docs/migration/: M25.3_EDGE_VENV_MIGRATION.md  from_v2.md
docs/protocols/: VisionOps_unified_grasp_point_protocol_v1.2.md
docs/server/: README.md  api.md  model_package_spec.md  storage_optimization.md  workflow.md
edge/camera_bridge/: __init__.py  camera_selection.py
edge/camera_bridge/hp60c_bridge/: CMakeLists.txt  README.md  hp60c_sdk_bridge.env.example  install_hp60c_sdk_bridge_service.sh  visionops_hp60c_sdk_bridge.cpp
edge/camera_bridge/orbbec336l_bridge/: CMakeLists.txt  README.md  install_orbbec336l_bridge_service.sh  orbbec336l_bridge.env.example  visionops_orbbec336l_bridge.cpp
edge/deploy/: push.sh
edge/gateway_adapter/: README.md  __init__.py  gateway_message.py  gateway_mock_service.py  register_map.py  result_fetcher.py  result_to_gateway.py
edge/modbus_adapter/: README.md  __init__.py  modbus_registers.py  modbus_tcp_mock.py  modbus_test_client.py
edge/runtime_cpp/: CMakeLists.txt  README.md
edge/runtime_cpp/examples/mock_model_package/: labels.txt  manifest.json  model.yaml
edge/runtime_cpp/include/visionops_runtime/: app_config.hpp  cli_args.hpp  http_server.hpp  http_types.hpp  image_buffer.hpp  json_utils.hpp  mock_data.hpp  model_config.hpp  model_package.hpp  postprocess.hpp  postprocess_classification.hpp  postprocess_detect.hpp  postprocess_obb.hpp  postprocess_seg.hpp  preprocess.hpp  rga_preprocess.hpp  rknn_runner.hpp  roi_filter.hpp  runtime_app.hpp  runtime_state.hpp  snapshot_provider.hpp  stream_worker.hpp
edge/runtime_cpp/src/: app_config.cpp  cli_args.cpp  http_server.cpp  json_utils.cpp  main.cpp  mock_data.cpp  model_config.cpp  model_package.cpp  postprocess.cpp  postprocess_classification.cpp  postprocess_detect.cpp  postprocess_obb.cpp  postprocess_seg.cpp  preprocess.cpp  rga_preprocess.cpp  rknn_runner_factory.cpp  rknn_runner_mock.cpp  rknn_runner_real.cpp  roi_filter.cpp  runtime_app.cpp  runtime_state.cpp  snapshot_provider.cpp  stream_worker_mock.cpp
edge/runtime_cpp/tests/: postprocess_fixture.cpp  smoke_test.sh
interfaces/cpp/: visionops_shared_depth.hpp  visionops_shared_rgb.hpp
interfaces/examples/: camera_frame.example.json  gateway_message.carton_partition_check.ng.example.json  gateway_message.carton_partition_check.ok.example.json  gateway_message.carton_tube_check.ng.example.json  gateway_message.carton_tube_check.ok.example.json  gateway_message.example.json  inference_result.detect.example.json  inference_result.obb.example.json  inference_result.roi_classification.example.json  inference_result.segmentation.example.json  model_package_manifest.example.json  runtime_status.example.json
interfaces/protocols/: carton_partition_check_mock.md  carton_tube_check_mock.md  gateway_modbus_mock.md  runtime_http_api.md
interfaces/schemas/: camera_frame.schema.json  common.schema.json  config.schema.json  gateway_message.schema.json  inference_result.schema.json  model_package_manifest.schema.json  runtime_status.schema.json
models/: README.md
production/: README.md  __init__.py
production/carton_line/: README.md  __init__.py  launcher.py
production/carton_palletizing/: M24.5_INTEGRATION_NOTES.md  M25.3_GRASP_POINT_PROTOCOL_V1.2_NOTES.md  M28.7_ODD_EVEN_TEMPLATE_STATUS_NOTES.md  M28.7_TRIGGER_PROTOCOL_NOTES.md  M29.1_ROI_CONTROL_FIX_NOTES.md  M29.2_TRIGGER_TASK_ALIAS_NOTES.md  M29_SURFACE_TARGET_PROTOCOL_NOTES.md  README.md  __init__.py  config.py  launcher.py
requirements/: edge-dev.txt  edge-runtime.txt
scripts/: cleanup_visionops_services.sh  collector_start.sh  optimize_server_storage.sh  runtime_start.sh  server_start.sh  setup_edge_env.sh  start_collector.sh  start_runtime.sh  start_server.sh
tests/integration/: conftest.py  test_business_app_mock.py  test_business_app_real_upstream.py  test_collector_web_proxy.py  test_gateway_modbus_mock.py  test_runtime_backend_selection.py  test_runtime_camera_error_paths.py  test_runtime_frame_source.py  test_runtime_mock_http.py  test_runtime_model_config.py  test_runtime_postprocess_contract.py  test_runtime_rknn_error_paths.py  test_tube_pick_tcp_service.py  test_tube_pick_websocket_service.py
tests/unit/: test_app_register_maps.py  test_box_grasp_local_ipc.py  test_carton_box_grasp_vision.py  test_carton_palletizing_first_layer.py  test_carton_palletizing_trigger_protocol.py  test_carton_partition_check_decision.py  test_carton_tube_check_decision.py  test_config_validation.py  test_dual_camera_bridge.py  test_gateway_mapping.py  test_interface_examples.py  test_modbus_registers.py  test_model_catalog.py  test_orbbec_reboot_escalation.py  test_orbbec_recovery_contract.py  test_render_runtime_env.py  (+8 more)
tools/: benchmark_runtime.py
(+190 files in other folders)
